# 5G-fuzzy-reputation

./: README.md  pyproject.toml
conf/: config.yaml  fuzzy_config.yaml
conf/peers/: bad.yaml  f_embb_bad.yaml  f_embb_good.yaml  f_embb_oscillating.yaml  f_embb_outage.yaml  f_mmtc_bad.yaml  f_mmtc_good.yaml  f_mmtc_oscillating.yaml  f_mmtc_outage.yaml  f_urllc_bad.yaml  f_urllc_good.yaml  f_urllc_oscillating.yaml  f_urllc_outage.yaml  good.yaml  outage.yaml  readme.md
conf/reputation/decay/: adaptive_window.yaml  double_window.yaml  exponential.yaml  simple_window.yaml
conf/simulation/: default.yaml  fuzzy.yaml
conf/simulation/distribution/: decay_test.yaml  fuzzy.yaml  fuzzy_failure.yaml  fuzzy_oscillating.yaml  half.yaml  single_failure.yaml
conf/simulation/environment/: base.yaml  bootstrap_base.yaml  decay_test.yaml
conf/topology/: default.yaml
plotter/: decay_analysis.ipynb  fairness_analysis.ipynb  paper_graphs.ipynb  plot_fairness.py  plot_label.py  plot_topology.py  plot_utils.py  reputation_efficiency.ipynb  topology_analysis.ipynb
plotter/test/: test_plot_utils.py
reput/: __main__.py  common_utils.py  decay.py  environment.py  fuzzy.py  peer.py  record.py  stats.py  test_fuzzy_logic.ipynb  topology.py  topology_stats.py  transactions.py
reput/tests/: test_decay.py  test_peer.py  test_records.py  test_reput.py
reput/utils/: behavior.py
results/no_reput/: global_stats.json  stats_overtime.json
results/reput/: global_stats.json  stats_overtime.json
results/reput_no_random/: global_stats.json  stats_overtime.json
(+1741 files in other folders)
